need more precision setting frames of video

--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -18,17 +18,17 @@
             android:orientation="horizontal">
 
             <Button
-                android:id="@+id/btnQuickTest"
+                android:id="@+id/btnLoadVideo"
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
-                android:text="Quick Test" />
+                android:text="Load video" />
 
         </LinearLayout>
 
         <LinearLayout
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
-            android:orientation="vertical">
+            android:orientation="horizontal">
 
             <VideoView
                 android:id="@+id/vView"
